fixed connection issues memory leak